--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <title></title>
@@ -13,6 +15,5 @@
         <a href="tel:+79219825402" class="main__title"> +7(921)982 54 02</a>
         <h3 class="main__des">Пресвятые диджитали, что делается! Увидимся в 2019</h3>
     </main>
-
-
-</body></html>
+</body>
+</html>
